--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.2.3"
   }
 }
