--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "contentful": "^8.2.1",
     "dotenv": "^8.2.0",
+    "emailjs-com": "^2.6.4",
     "framer-motion": "^4.1.2",
     "next": "10.1.2",
     "react": "17.0.2",
